force-app/main/default/objects/BillingKickback__c/BillingKickback__c.object-meta.xml
<CustomObject>
    <label>Billing + Kickback</label>
    <nameField>
        <displayFormat>BK-{00000}</displayFormat>
        <label>Billing + Kickback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing + Kickback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>