force-app/main/default/objects/BillingKickback__c/fields/AmountTaxBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxBuyingUSD__c</fullName>
    <label>Amount Tax Buying (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>