force-app/main/default/objects/BillingKickback__c/fields/AmountTaxBuyingVND__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxBuyingVND__c</fullName>
    <label>Amount Tax Buying (VND)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>