force-app/main/default/objects/BillingKickback__c/fields/Kickback__c.field-meta.xml
<CustomField>
    <fullName>Kickback__c</fullName>
    <label>Kickback</label>
    <referenceTo>Kickback__c</referenceTo>
    <relationshipLabel>Billing + Kickback</relationshipLabel>
    <relationshipName>Billing_Kickback</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>