force-app/main/default/objects/BillingKickback__c/fields/MasterBilling__c.field-meta.xml
<CustomField>
    <fullName>MasterBilling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Billing</label>
    <referenceTo>ConsolBill__c</referenceTo>
    <relationshipLabel>Billing + Kickback</relationshipLabel>
    <relationshipName>Billing_Kickback</relationshipName>
    <type>Lookup</type>
</CustomField>