force-app/main/default/objects/BillingKickback__c/fields/TotalAmountofBuyingVND__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingVND__c</fullName>
    <label>Total Amount of Buying (VND)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>