force-app/main/default/objects/BillingKickback__c/fields/TotalBuyingInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxUSD__c</fullName>
    <label>Total Buying Incl Tax (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>