force-app/main/default/objects/BillingKickback__c/fields/TotalBuyingInclTaxVND__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxVND__c</fullName>
    <label>Total Buying Incl Tax (VND)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>