force-app/main/default/objects/BillingKickback__c/fields/UnitPriceofBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofBuyingUSD__c</fullName>
    <label>Unit Price of Buying (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>